# deskbit

./: C  README.md  convert_pomo.bat  generate_anim.py  generate_icon.py  partitions.csv  run_swap.bat  sdkconfig  sdkconfig.defaults  sdkconfig.old  swap_bytes.py  swap_verify.py
components/user_app/: ANIMATION_MANAGER_GUIDE.md  ANIMATION_MANAGER_SETUP.md  CMakeLists.txt  anim_manager.c  anim_manager.h  anim_manager_example.c  anim_registry.c  deskbot_icon.c  heart.c  pomo_gif.c  pomodoro_icon.c  settings_icon.c  ui_custom_anim.c  ui_custom_anim.h  ui_robo_eyes.c  ui_robo_eyes.h  ui_settings.c  ui_settings.h  user_app.c  user_app.h
components/user_app/animations/: blink_anim.h  my_anim.c  my_anim.h
esp32-s3-amoled-lvgl/s3-amoled/main/: CMakeLists.txt  board_lcd.c  board_lcd.h  hello_world_main.c  idf_component.yml  lvgl_app.c  lvgl_app.h  lvgl_detect.h  read_lcd_id_bsp.c  read_lcd_id_bsp.h  touch_bsp.c  touch_bsp.h  ui_brightness_screen.c  ui_brightness_screen.h  ui_cat_screen.c  ui_cat_screen.h  ui_gif_screen.c  ui_gif_screen.h  ui_robo_eyes_old.c  ui_robo_eyes_old.h  ui_robot_screen_old.c  ui_robot_screen_old.h  ui_squareline_screen.c  ui_squareline_screen.h
esp32-s3-amoled-lvgl/s3-amoled/main/assets/: angry_png.c  angry_png.h  baby_ugh_gif.c  baby_ugh_gif.h  broken_png.c  broken_png.h  heart_png.c  heart_png.h  sleep_mode_png.c  sleep_mode_png.h
index/: _RGB_B_alpha_466x466.c.722C67CD745EE815.idx  _bluetooth_alpha_20x16.c.FF4D1C01B65AE5D2.idx  _hour_needle_white_alpha_70x8.c.DCDC86DF763B375A.idx  _hour_needle_white_alpha_75x8.c.C172D7D83310DB30.idx  _wifi__alpha_100x90.c.F1708728AF773985.idx  adc_bsp.c.7E3BFFC877A2EAC4.idx  adc_bsp.h.888951E2FD0CB0D8.idx  animimg002.c.96AB76F71F6D0518.idx  animimg003.c.9D5D7DBF5D9A41D7.idx  ble_scan_bsp.h.8E857066998D5453.idx  button_bsp.c.E8791DB7DE151D6A.idx  button_bsp.h.7A847F1D4FE80B11.idx  code128.c.E0BD1CD76F8DA30F.idx  custom.c.5D19F52CE2E97A1A.idx  custom.h.514E93617E3317C0.idx  events_init.c.74DC96C5F019C9BF.idx  events_init.h.C159EFFC5BCA6C81.idx  example_qspi_with_ram.c.5A4835C226B6E43A.idx  gifdec.h.1927FE221BDD14AA.idx  gpio_bsp.h.761E770E2D263AC7.idx  gui_guider.c.D7310CEDE3A72195.idx  gui_guider.h.43E86921DC07B1AB.idx  img_benchmark_cogwheel_indexed16.c.97C7AAE1904DA6A5.idx  img_bulb_gif.c.51FB5935AD0B3BFB.idx  img_caret_down.c.1210C64ED90193A9.idx  img_clothes.c.75A58AF11F56DCBD.idx  img_cogwheel_argb.c.4896BB3F3EF789AF.idx  img_cogwheel_chroma_keyed.c.ED840BE22D7326EE.idx  img_cogwheel_rgb.c.E28AC8516D24D8F1.idx  img_demo_widgets_avatar.c.D16DD1AD2BE4035D.idx  img_emoji_F617.c.3D005C4D62605DE9.idx  img_hand.c.449DFC0C130483DD.idx  img_lv_demo_music_btn_list_play_large.c.D3A773F6232DC7AF.idx  img_lv_demo_music_btn_loop_large.c.5E8533E017805726.idx  img_lv_demo_music_btn_play.c.CD68AA85E5B933FC.idx  img_lv_demo_music_btn_play_large.c.CE1540A90F4B0BB9.idx  (+342 more)
(+1165 files in other folders)
