idf_component_register(SRCS "ui_robot_screen_old.c" "ui_robo_eyes_old.c" "ui_cat_screen.c"
                           
                           
                            "ui_gif_screen.c"
                            "hello_world_main.c"
                            "lvgl_app.c"
                            "board_lcd.c"
                            "ui_brightness_screen.c"
                            "esp_lcd_sh8601.c"
                            "read_lcd_id_bsp.c"
                            "touch_bsp.c"
                            "assets/baby_ugh_gif.c"
                            "assets/broken_png.c"
                            "assets/angry_png.c"
                            "assets/heart_png.c"
                            "assets/sleep_mode_png.c"
                            "../lib/gui/Behaviour/GUI_Animations.c"
                            "../lib/gui/Behaviour/GUI_Events.c"
                            "../lib/gui/Content/screens/Thermostat.c"
                            "../lib/gui/GUI.c"
                            "../lib/gui/GUI_Variables.c"
                            "../lib/gui/assets/images/upload_add_7fba7748a7d744aaab0c57c4fc5a4f66_png.c"
                            "../lib/gui/assets/images/upload_arcgradient_9e9294aa673f4b5bada2f072c1569f01_png.c"
                            "../lib/gui/assets/images/upload_minus_5a547ec0c00c4c878e37b6db74a5780b_png.c"
                            "../lib/gui/assets/images/upload_power_372f8c62384245389afc44ea932ce871_png.c"
                            "../lib/gui/assets/images/upload_poweroff_0e026f8ba5b04ec388027fd0b24a6ec6_png.c"
                            "../lib/gui/assets/images/upload_snowflake_e792b7d03b214098bf944a0c2ddbace0_png.c"
                            "../lib/gui/assets/images/upload_sun_7ea59047260d4e15b671364554d50555_png.c"
                            "../lib/gui/assets/styles/GUI_GlobalStyles.c"
                            "../lib/gui/fonts/body_1.c"
                            "../lib/gui/fonts/font_1.c"
                            "../lib/gui/ui_helpers.c"
                       PRIV_REQUIRES driver esp_lcd esp_timer heap lvgl esp_psram
                       INCLUDE_DIRS "../lib/gui")
